vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_infix_expr.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_infix_expr.vv:3:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     fallback := $embed_file(@FILE)
    3 |     fallback == $embed_file(@FILE)
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    4 | }
