vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_infix_expr.vv
fn main() {
	fallback := $embed_file(@FILE)
	fallback == $embed_file(@FILE)
}
